# arabic-llm

./: .gitignore  README.md  find_data_folder.py
TurathAnnotator/: annotator.py  main.py
TurathAnnotator/data/raw/shamela.ws/: authors.html  المكتبة الشاملة.html  فهرس المؤلفين - المكتبة الشاملة.html
TurathAnnotator/data/raw/shamela.ws/authors_files/: custom.css  js  saved_resource  saved_resource.html
TurathAnnotator/data/raw/shamela.ws/المكتبة الشاملة_files/: custom.js.download  saved_resource.html
TurathAnnotator/data/raw/shamela.ws/فهرس المؤلفين - المكتبة الشاملة_files/: js  saved_resource(1)  saved_resource.html
TurathAnnotator/data/raw/turath/: authors.html
TurathAnnotator/src/shamela_ws/downloading_scraping_parsing/: books_list.py
TurathAnnotator/src/waqfeya-library/: process_arabic_file.py  read_arabic_tsv.py
TurathIngestor/: README.md  db_loader.py
TurathIngestor/data/raw/Multi-IsnadSet (MIDS) for Sahih Muslim Hadith with chain of Narrators, based on multiple ISNAD/: 1_Hadith_SahihMuslim_HadithContent.xlsx  2_Hadith_SahihMuslim_Narrators=Nodes for Graph.xlsx  4_Hadith_SahihMuslim_Narrators=Nodes for Neo4jCypherQueryScript.txt  6_Hadith_SahihMuslim_NodesEdges for Graph.gml
TurathIngestor/src/islamweb_net/downloading_scraping_parsing/: books_list.py
config/__testing__/: config.yaml  grading_keywords.yaml  model_config.yaml  schema_map.yaml  settings.yaml
config/__testing__/hadith/: grading_keywords.yaml
config/__testing__/honorifics/: default.yaml
config/__testing__/locations/: default.yaml
config/__testing__/names/: default.yml
config/__testing__/titles/: default.yaml
config/books/shamela_ws/: categories.yaml
config/python-dict/arabic_clean_text/: arabic_clean_text.py
config/python-dict/categories/: islamweb_net.py  shamela_ws.py
config/python-dict/sources/: openiti_books.py
data_static/quran/: surah_mapping.yaml
docs/README/: Arabic NER with Hydra Configuration.md  Dependency Scanner Script.md  Dependency Scanner.py  Hadith NLP Config Project Boilerpl.md  HonorificsConfig.py  Hydra Pydantic Loader.md  Hydra-powered.py  README (2).md  README.md  config.yaml  generate_yaml_skeletons.py  level.md  models.py  project structure.md  project_path_manger  pyproject.toml  pyproject.toml.md  r2.md  requ1.md  requi.txt  run.py  setup.md  test.py  yaml.md
examples/: remove_date_duplicates.py
external_modules/Quran_Detector/: QuranDetectorAnnotater_1.py  format_quranic_matches.py  other.py  q1.py  q2.py  q3.py  replace_verses_in_text.py
external_modules/Quran_Detector/data/: Tweets_Gold.txt
modules/db/sqlite/: DatabaseManager.py
modules/etl/schemas_validator/: __init__.py
modules/features_extraction/date/: README.md  README2.md  date_config_loader.py  date_standardization.py  datev6.py  requirements.txt
modules/features_extraction/date/configs/: date_config.yaml
modules/features_extraction/ner/: combine_named_entities_with_honorifics.py  hadith.py  main.py  untitled40.py  untitled43.py
modules/features_extraction/ner/config/: arabic_ner.yaml
modules/features_extraction/ner/schemas/: arabic_ner_schema.py
modules/llm/annotators/: structure_ocr_result_book.py
modules/nlp/normalizer/: README.md  arabic_normalizer.py  clean_ar.py  example_usage.py
modules/nlp/normalizer/config/: arabic_config.yaml
modules/regex/: patterns.py
modules/schemas/: schemas.py  usage.py
modules/utils/: __init__.py  config_files.py  sysconfig.py
modules/utils/files_handler/: CompressedFileReader.py  to_csv.py
modules/utils/path_handler/: paths.md  paths.py
